name:                pingo
version:             0.1.0.0
synopsis:            Pretty Printer for Clingo
homepage:            https://github.com/egnwd/pingo
license:             MIT
license-file:        LICENSE
author:              Elliot Greenwood
maintainer:          hello@elliotgreenwood.co.uk

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable pingo
  main-is:             Main.hs
  build-depends:
    base >=4.9 && <4.10,
    parsec >= 3.1 && < 3.2,
    ansi-terminal >= 0.7 && <1.0

  hs-source-dirs:      src
  default-language:    Haskell2010

