name:                pingo
version:             0.1.0.0
synopsis:            Pretty Printer for Clingo
homepage:            https://github.com/egnwd/pingo
license:             MIT
license-file:        LICENSE
author:              Elliot Greenwood
maintainer:          hello@elliotgreenwood.co.uk

build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules: Pingo.AST
  build-depends:
    base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pingo
  main-is:             Main.hs
  build-depends:
    base >=4.9 && <4.10,
    parsec >= 3.1 && < 3.2,
    parsec3-numbers == 0.1.0,
    ansi-terminal >= 0.7 && <1.0,
    unix >= 2.7.2 && < 2.8,
    options >= 1.2.1.1 && < 1.3

  hs-source-dirs:      src
  default-language:    Haskell2010

